--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b36d7bc04c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Baljit Sokhi</title>
 </head>
 <body>
@@ -74,7 +74,7 @@
                 <!-- project git hub link -->
                 <h3>What The Colour?!</h3>
                 <p>HTML5 | CSS3 | Sass | JavaScript</p>
-                <p>Created an interactive app that allows users to test out wall paint colours with selections of furniture and floor shades using jQuery</p>
+                <p>Created an interactive app that allows users to test out wall paint colours with selections of furniture and floor shades using jQuery.</p>
                 <a href="https://bksokhi.github.io/WhatTheColour/">Project Link</a>
                 <a href="https://github.com/bksokhi/WhatTheColour">GitHub Link</a>
             </div>
@@ -86,7 +86,7 @@
                 <!-- project git hub link -->
                 <h3>Rugged//Footprints Shop</h3>
                 <p>HTML5 | CSS3 | React | Firebase</p>
-                <p>Developed an e-commerce app that allows the user to select and remove photography print orders using React and Firebase</p>
+                <p>Developed an e-commerce app that allows the user to select and remove photography print orders using React and Firebase.</p>
                 <a href="https://bksokhi.github.io/ruggedFootprintsShop/">Project Link</a>
                 <a href="https://github.com/bksokhi/ruggedFootprintsShop">GitHub Link</a>
 
