updated bio and contact content

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <title>Baljit Sokhi</title>
 </head>
 <body>
-    <header>
+    <header id="home">
 
         <section class="banner">
             <div class="navBar largeWrapper">
                 <div class="logo">
-                    <img src="./assets/logoImg.png" alt="Baljit Kaur Sokhi logo.">
+                    <a href="#home"><img src="./assets/logoImg.png" alt="Baljit Kaur Sokhi logo."></a>
                 </div>
                 <nav>
                     <i class="fas fa-bars burgerOpen"></i>
@@ -51,9 +51,8 @@
                 <img src="./assets/baljit.jpg" alt="Profile image of Baljit Sokhi.">
                 <h2 id="bio">About Me</h2>
                 <!-- bio info -->
-                <p>I am a front end developer with a strong managerial and healthcare background that has helped reinforce my communication
-                and analytical skills. My love for creating user-friendly applications sparked when ideas came to mind on how to improve
-                our clinic software system. My interests also include dancing/teaching hip- hop and salsa, watching Anime, and biking.</p>
+                <p>Hello! My name is Baljit <em>(bal-brave, jit-winner)</em>.<br>
+                I am a front end developer and an avid chai enthusiast with a strong managerial and healthcare background that has helped reinforce my communication and analytical skills. My love for creating user-friendly applications sparked when ideas came to mind on how to improve our software system within our eye clinic to run the practice more efficiently. My interests also include dancing/teaching hip- hop and salsa, watching Anime, biking, and if you haven't guessed it... drinking chai.</p>
             </div>
             
         </section>
@@ -122,7 +121,7 @@
                 <div class="projectContainer wrapper">
                     <div class="projectInfo">
                         <h3>What The Colour?!</h3>
-                        <p>HTML5 | CSS3 | Sass | JavaScript</p>
+                        <p>HTML5 | CSS3 | Sass | jQuery</p>
                         <p>Created an interactive app that allows users to test out wall paint colours with selections of furniture and floor shades using jQuery.</p>
                         
                     </div>
@@ -191,8 +190,8 @@
         <section class="contact wrapper" id="contact" data-aos="fade-up" data-aos-duration="1000">
             <div class="contactContainer">
                 <h2>Let's Talk!</h2>
-                <p>Thanks for taking a look at my page! If you'd like chat or just learn about how to make the perfect cup of chai, feel free to reach out!</p>
-                <p>sokhibaljit@gmail.com</p>
+                <p>Thanks for taking a look at my page! If you'd like to chat, or just learn about how to make the perfect cup of chai, feel free to reach out!</p>
+                <p class="email"><a href="mailto:sokhibaljit@gmail.com">sokhibaljit@gmail.com</a></p>
             </div>
 
             <!-- social links -->
