project4 and tailwind added

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <section class="banner">
             <div class="navBar largeWrapper">
                 <div class="logo">
-                    <a href="#home"><img src="./assets/logoImg.png" alt="Baljit Kaur Sokhi logo." aria-label="Click to go to top of page."></a>
+                    <img src="./assets/logoImg.png" alt="Baljit Kaur Sokhi logo.">
                 </div>
                 <nav>
                     <i class="fas fa-bars burgerOpen" aria-label="open navigation menu"></i>
                     <div class="navMenu">
                         <ul>
+                            <li><a href="#home">Home</a></li>
                             <li><a href="#bio">About</a> </li>
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#projects">My Work</a></li>
@@ -71,6 +72,10 @@
                         <p>CSS3</p>
                     </li>
                     <li>
+                        <i class="fas fa-wind"></i>
+                        <p>Tailwind CSS</p>
+                    </li>
+                    <li>
                         <i class="fab fa-sass"></i>
                         <p>Sass</p>
                     </li>
@@ -95,7 +100,7 @@
                         <p>GitHub</p>
                     </li>
                     <li>
-                        <i class="fas fa-fire"></i>
+                        <i class="devicon-firebase-plain"></i>
                         <p>Firebase</p>
                     </li>
                     <li>
@@ -136,7 +141,7 @@
                         <div class="projectLink">
 
                             <button><a href="https://bksokhi.github.io/WhatTheColour/">Project Link</a></button>
-                            <button><a href="https://github.com/bksokhi/WhatTheColour">GitHub Link</a></button>
+                            <button class="githubButton"><a href="https://github.com/bksokhi/WhatTheColour">GitHub Link</a></button>
                         </div>
                     </div>
                 </div>
@@ -153,7 +158,7 @@
 
                         <div class="projectLink">
                             <button><a href="https://bksokhi.github.io/ruggedFootprintsShop/">Project Link</a></button>
-                            <button><a href="https://github.com/bksokhi/ruggedFootprintsShop">GitHub Link</a></button>
+                            <button class="githubButton"><a href="https://github.com/bksokhi/ruggedFootprintsShop">GitHub Link</a></button>
                         </div>
                     </div>
 
@@ -182,8 +187,31 @@
 
                         <div class="projectLink">
                             <button><a href="https://wordparty.github.io/wordParty/">Project Link</a></button>
-                            <button><a href="https://github.com/wordParty/wordParty">GitHub Link</a></button>
+                            <button class="githubButton"><a href="https://github.com/wordParty/wordParty">GitHub Link</a></button>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project4" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300">
+                <!-- project preview -->
+                <!-- project title and description - tech used -->
+                <!-- project link -->
+                <!-- project git hub link -->
+                <div class="projectContainer wrapper">
+                    <div class="projectImg">
+                        <img src="./assets/BroswerWindowFeedBear.png" alt="Screenshot of 'FeedBear' website.">
+            
+                        <div class="projectLink">
+                            <button><a href="https://feedbear-app.herokuapp.com/">Project Link</a></button>
+                            <button class="githubButton"><a href="https://github.com/JEANNEAJ/feedbear">GitHub Link</a></button>
+                        </div>
+                    </div>
+            
+                    <div class="projectInfo">
+                        <h3>FeedBear</h3>
+                        <p>Tailwind CSS | MERN</p>
+                        <p>Looking for feedback on your app? We made an app for that! Collaborated as lead designer to create an app that allows users to login, post their projects, and ask other users to provide feedback.</p>
                     </div>
                 </div>
             </div>
